<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>groupId</groupId>
    <artifactId>Librarian</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
	    <app.name>${project.artifactId}</app.name>
	    <app.version>${project.version}</app.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.2-1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
    	<version>3.6.2</version>
    	<executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>4.0.0-rc-4</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

     <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>4.0.0-beta-3</version>
        <configuration>
            <annotationProcessorPathsUseDepMgmt>true</annotationProcessorPathsUseDepMgmt>
        </configuration>
		</plugin>

	    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <archive>
            <manifest>
		    <mainClass>main.local.work.Main</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
          <groupId>com.github.akman</groupId>
          <artifactId>jpackage-maven-plugin</artifactId>
          <version>0.1.5</version>
          <executions>
            <execution>
            <id>jpackage-installer</id>
            <phase>verify</phase>
            <goals>
              <goal>jpackage</goal>
            </goals>
        </execution>
            <execution>
            <phase>package</phase>
              <goals>
                <goal>jpackage</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <name>${app.name}</name>
            <appversion>${app.version}</appversion>
            <copyright>${copyright}</copyright>
            <vendor>${vendor.name}</vendor>
            <mainjar>${app.name}-${app.version}-jar-with-dependencies.jar</mainjar>
            <input>target/</input>
            <mainclass>main.local.work.Main</mainclass>
            <type>RPM</type>
            <javaoptions>--enable-preview</javaoptions>
            <dest>.</dest>
          </configuration>
        </plugin>
        </plugins>
    </build>
</project>

<!-- vim: set sw=4 ts=4 et ai : -->
